--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 									
 									<img src="imagem/tecnologia.jpg" width="80">
 									<h4> Crise Tecnologica </h4>
-									<p>Lorem Ipsum is simply dummy text of the printing...</p>
+									<p>Lorem Ipsum is simpl dummy text of the printing...</p>
 									
 								</a>
 							</li>
